# honiden_robot

hd_detector/: CMakeLists.txt  detector.xml  package.xml
hd_detector/include/: PolygonalMap.h  hand.h  hand_detector.h  hands.h  new_openni_grabber.h  original_openni_grabber.h  osc.h  ros2osc.h  simple_detector.h
hd_detector/include/pcl_tools/: ex_segfast.hpp  pcl_utils.h  segfast.hpp
hd_detector/include/pcl_tools/nnn/: nnn.hpp
hd_detector/launch/: .#small_object_tracker.launch  ardrone_detector.launch  cdfc.launch  cdfc_control.launch  cluster_extraction.launch  color_detector.launch  cooperation.launch  crazy_flie_tracker.launch  detector.launch  detector_imp.launch  getcloudview.launch  hydra_detector.launch  nc_detector.launch  new_ardrone_detector.launch  new_color_detector.launch  new_object_detector.launch  object_detector.launch  simple_object_detector.launch  small_object_tracker.launch
hd_detector/src/: ardrone_detector.cpp  cdfc_control.cpp  cluster_extraction.cpp  clustering.cpp  color_detector.cpp  color_detector_for_crazyflie.cpp  crazy_flie_tracker.cpp  detector.h  detector_imp.cpp  discover_viewer.cpp  getCloud_view.cpp  hand_detector.cpp  hand_detector2.cpp  hydra_detector.cpp  new_ardrone_detector.cpp  new_color_detector.cpp  new_object_detector.cpp  object_detector.cpp  openni_processor_simple.cpp  openni_viewer_plane.cpp  openni_viewer_simple.cpp  original_openni_grabber.cpp  pcl_utils.cpp  pcl_viewer.cpp  pcl_write.cpp  position_getter.cpp  pursuit_viewer.cpp  reference_viewer.cpp  simple_detector.cpp  small_object_tracker.cpp
hd_kinect_control/: CMakeLists.txt  package.xml  package.xml~
hd_kinect_control/msg/: #customers_state.msg#  customers_state.msg
hd_kinect_control/src/: base_control.cpp
hd_recognition/: CMakeLists.txt  package.xml
hd_recognition/launch/: cloud_clustering.launch
hd_recognition/src/: #pra_transform2.cpp#  #uav_tracker.cpp#  .#uav_tracker.h  ardrone_tracker.h  cloud_clustering.cpp  cloud_clustering.h  cloud_clustering_node.cpp  cloud_handler.cpp  detector.cpp  detector.h  frame_extractor.cpp  param_changer.cpp  param_changer.h  param_changer_for_tod.cpp  param_changer_for_tod.h  pcl_viewer.cpp  pra_eigen.cpp  pra_transform.cpp  pra_transform2.cpp  pra_transform_listener.cpp  pra_transform_listener2.cpp  realtime_viewer.cpp  table_object_detector.cpp  table_object_detector.h  table_object_detector_todo.txt  test_clustering.cpp  test_odom_pub.cpp  uav_tracker.cpp  uav_tracker.h  uav_tracker_node.cpp
hd_turtle_operation/: CMakeLists.txt  package.xml
hd_turtle_operation/launch/: .#turtle_operation_amcl.launch  amcl.launch  multi_turtle_operator.launch  multiple_openni.launch  task_generator.launch  turtle_0.launch  turtle_1.launch  turtle_namespace_1.launch  turtle_no_namespace.launch  turtle_operation_amcl.launch  turtle_operation_amcl_no_namespace.launch  turtle_operation_tracker.launch  turtle_sensor.launch  turtle_tracker.launch  turtle_tracker_dum.launch
hd_turtle_operation/launch/includes/: multi_amcl.launch.xml  multi_move_base.launch.xml  multi_move_base_no_namespace.launch.xml  velocity_smoother.launch.xml
hd_turtle_operation/launch/turtlebot_bringup_launch/: minimal.launch  minimal_with_appmanager.launch  paired_public.launch
hd_turtle_operation/launch/turtlebot_bringup_launch/includes/: mobile_base.launch.xml  robot.launch.xml
hd_turtle_operation/launch/turtlebot_bringup_launch/includes/kobuki/: mobile_base.launch.xml
hd_turtle_operation/launch/turtlebot_navigation/: amcl_demo.launch  amcl_demo.launch~
hd_turtle_operation/maps/: around_table.pgm  around_table.yaml  experiment_hall.pgm  experiment_hall.yaml  lab_second_column.pgm  lab_second_column.yaml
hd_turtle_operation/msg/: graphBasedMap.msg  graphEdge.msg  graphNode.msg  observeTask.msg  pathPlanSet.msg  taskCandidates.msg  taskOrder.msg  taskOrderSet.msg  taskOrderSetContainer.msg
hd_turtle_operation/param/param_turtle_0/kobuki_node/: base.yaml
hd_turtle_operation/param/param_turtle_1/: global_costmap_params.yaml  local_costmap_params.yaml
hd_turtle_operation/param/param_turtle_1/kobuki_node/: base.yaml
hd_turtle_operation/param/param_turtle_2/: global_costmap_params.yaml  local_costmap_params.yaml
hd_turtle_operation/param/param_turtle_2/kobuki_node/: base.yaml
hd_turtle_operation/param/turtle_0/: global_costmap_params.yaml  local_costmap_params.yaml
hd_turtle_operation/scripts/: .#turtle_multi_launch_turtle_1.sh  experiment_tmp.sh  turtle_multi_launch.sh  turtle_multi_launch_no_namespace.sh  turtle_multi_launch_turtle_0.sh  turtle_multi_launch_turtle_0_lab.sh  turtle_multi_launch_turtle_1.sh  turtle_multi_launch_turtle_1_lab.sh
hd_turtle_operation/src/: MersenneTwister.h  bridge_to_turtle.cpp  bridge_to_turtle.h  genetic_algorithm.cpp  genetic_algorithm.h  genetic_algorithm.h~  map_handler.cpp  multi_turtle_operator.cpp  multi_turtle_operator.h  path_planning.cpp  path_planning.h  path_planning_test.cpp  pra_2dgrid_handler.cpp  simple_goal_publisher.cpp  single_turtle_operator.cpp  task_generator.cpp  task_generator.h  turtle_operator.cpp  turtle_operator.h  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
